# ai-first-devops-toolkit

./: .gitignore  CLAUDE.md  PROJECT_REQUIREMENTS.md  README.md  data.json  llm_ci_runner.py  llm_runner.py  pyproject.toml  test-structured-output.json  test_runner.py
.cursor/: memories.md  scratchpad.md
.cursor/rules/: lessons-learned.mdc  tests-guide.mdc
.github/workflows/: ci.yml  release.yml  unit-tests.yml
.run/: Python tests in tests.run.xml  pytest in acceptance.run.xml
acceptance/: README.md  conftest.py  llm_as_judge_acceptance_test.py  test_llm_quality_acceptance.py
examples/: README.md  code_review_schema.py  minimal-example.json  pr-review-example.json  test-examples.py  uv-usage-example.md
examples/01-basic/sentiment-analysis/: README.md
examples/01-basic/simple-chat/: README.md
examples/02-devops/changelog-generation/: README.md
examples/02-devops/code-review/: README.md
examples/02-devops/pr-description/: README.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_f86363723bc93fa9___init___py.html  z_f86363723bc93fa9___main___py.html  z_f86363723bc93fa9_azure_service_py.html  z_f86363723bc93fa9_core_py.html  z_f86363723bc93fa9_exceptions_py.html  z_f86363723bc93fa9_formatters_py.html  z_f86363723bc93fa9_io_operations_py.html  z_f86363723bc93fa9_llm_execution_py.html  z_f86363723bc93fa9_llm_service_py.html  z_f86363723bc93fa9_logging_config_py.html  z_f86363723bc93fa9_retry_py.html  z_f86363723bc93fa9_schema_py.html  z_f86363723bc93fa9_templates_py.html
llm_ci_runner/: __init__.py  azure_service.py  core.py  io_operations.py  llm_execution.py  llm_service.py  retry.py  schema.py  templates.py
scripts/: release.py
tests/: conftest.py  mock_factory.py
tests/integration/: conftest.py  integration_helpers.py  test_cli_interface.py  test_examples_integration.py  test_main_function.py  test_string_template_integration.py
tests/unit/: conftest.py  test_azure_service.py  test_core_helper_functions.py  test_formatters.py  test_input_output_functions.py  test_llm_service.py  test_retry.py  test_schema_functions.py  test_semantic_kernel_functions.py  test_setup_and_utility_functions.py  test_string_template_functions.py  test_template_functions.py
(+10 files in other folders)
